# MCEI_M_2520

Eigen/: CMakeLists.txt  README.md  ejercicio_matriz  ejercicio_matriz.cpp  ejercicio_matriz2  ejercicio_matriz2.cpp  ejercicio_pseudo  ejercicio_pseudo.cpp
